--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible " content="ie-edge" />
-    <meta name="description" content="" />
+    <meta
+      name="description"
+      content="Professional Photographers available for Weddings and Special Events"
+    />
     <meta name="robots" content="index, follow" />
     <link rel="icon" href="" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Elena Joy | Photographer</title>
   </head>
   <body></body>
 </html>
