--- a/index.html
+++ b/index.html
@@ -13,5 +13,42 @@
     <link rel="stylesheet" href="style.css" />
     <title>Elena Joy | Photographer</title>
   </head>
-  <body></body>
+  <body>
+    <header class="main-head">
+      <nav>
+        <h1 id="logo">Elena Joy</h1>
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section class="hero">
+        <div class="hero-intro flex">
+          <h2>
+            Elena Joy <br />
+            Photography
+          </h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio
+            nostrum est excepturi dignissimos veniam adipisci vel. Quia officia
+            hic sapiente.
+          </p>
+          <a href="#gallery">Gallery</a>
+        </div>
+        <div class="hero-img">
+          <img
+            src="./assets/elena-joy.png"
+            alt="Picture of Elena Joy"
+            class="hero-elena"
+          />
+          <img src="./assets/plant1.png" alt="" class="plant plant1" />
+          <img src="./assets/plant2.png" alt="" class="plant plant2" />
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
