--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
   <body>
     <header class="main-head">
       <nav>
-        <h1 id="logo">Elena Joy</h1>
+        <h1 id="logo"><a href="#">Elena Joy<a/></h1>
+        <input type="checkbox" class="burger-check" />
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#work">Work</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
+        <div class="burger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
       </nav>
     </header>
 
