--- a/index.html
+++ b/index.html
@@ -56,5 +56,27 @@
         </div>
       </section>
     </main>
+
+    <section class="about">
+      <div class="about-image">
+        <h5>MINIMAL</h5>
+        <img src="./assets/about-image.png" alt="Portrait picture">
+      </div>
+      <div class="about-text flex">
+        <h2>Elena Joy</h2>
+        <div class="about-content">
+          <h3>My Life</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat mollitia voluptatem quasi porro beatae soluta dicta. Architecto distinctio eius porro?</p>
+        </div>
+        <div class="about-content">
+          <h3>My Work</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat mollitia voluptatem quasi porro beatae soluta dicta. Architecto distinctio eius porro?</p>
+        </div>
+        <div class="about-content">
+          <h3>Get in Touch</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat mollitia voluptatem quasi porro beatae soluta dicta. Architecto distinctio eius porro?</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
