Gallery Section w/ CSS Grid

--- a/index.html
+++ b/index.html
@@ -78,5 +78,16 @@
         </div>
       </div>
     </section>
+
+    <section class="gallery">
+      <header class="gallery-head">
+        <h2>Quality Photography</h2>
+        <p>My work pictures that I took</p>
+      </header>
+      <img src="./assets/gallery-1.jpg" alt="Man in suit" class="gallery1">
+      <img src="./assets/gallery-2.jpg" alt="Lady in coat" class="gallery2">
+      <img src="./assets/gallery-3.jpg" alt="Lady in t-shirt" class="gallery3">
+      <img src="./assets/gallery-4.jpg" alt="Lady in jacket" class="gallery4">
+    </section>
   </body>
 </html>
