Contact Section and Footer. Project Complete. Or is it ?

--- a/index.html
+++ b/index.html
@@ -89,5 +89,24 @@
       <img src="./assets/gallery-3.jpg" alt="Lady in t-shirt" class="gallery3">
       <img src="./assets/gallery-4.jpg" alt="Lady in jacket" class="gallery4">
     </section>
+    <section class="contact">
+      <div class="form-wrapper flex">
+        <h2>Get in <br> <span>touch.</span></h2>
+        <form>
+          <label for="email">Your email</label>
+          <input type="email" id="email" required>
+          <button type="submit">Submit</button>
+        </form>
+      </div>
+      <img src="./assets/contact-image.jpg" alt="Elena Joy">
+    </section>
+    <footer>
+      <h4>&copy; Elena Joy 2020</h4>
+      <ul>
+        <li><a href="#"><img src="./assets/youtube-symbol 1.svg" alt="Elena Joy YouTube"></a></li>
+        <li><a href="#"><img src="./assets/twitter 1.svg" alt="Elena Joy Twitter"></a></li>
+        <li><a href="#"><img src="./assets/instagram 1.svg" alt="Elena Joy Instagram"></a></li>
+      </ul>
+    </footer>
   </body>
 </html>
