--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     <header class="main-head">
       <nav>
         <h1 id="logo"><a href="#">Elena Joy<a/></h1>
-        <input type="checkbox" class="burger-check" />
+        
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
-          <li><a href="#work">Work</a></li>
+          <li><a href="#gallery">Gallery</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="burger">
-          <span></span>
-          <span></span>
-          <span></span>
+          <span class="line1"></span>
+          <span class="line2"> </span>
+          <span class="line3"></span>
         </div>
       </nav>
     </header>
@@ -57,7 +57,7 @@
       </section>
     </main>
 
-    <section class="about">
+    <section class="about" id="about">
       <div class="about-image">
         <h5>MINIMAL</h5>
         <img src="./assets/about-image.png" alt="Portrait picture">
@@ -79,7 +79,7 @@
       </div>
     </section>
 
-    <section class="gallery">
+    <section class="gallery" id="gallery">
       <header class="gallery-head">
         <h2>Quality Photography</h2>
         <p>My work pictures that I took</p>
@@ -89,7 +89,7 @@
       <img src="./assets/gallery-3.jpg" alt="Lady in t-shirt" class="gallery3">
       <img src="./assets/gallery-4.jpg" alt="Lady in jacket" class="gallery4">
     </section>
-    <section class="contact">
+    <section class="contact" id="contact">
       <div class="form-wrapper flex">
         <h2>Get in <br> <span>touch.</span></h2>
         <form>
@@ -108,5 +108,6 @@
         <li><a href="#"><img src="./assets/instagram 1.svg" alt="Elena Joy Instagram"></a></li>
       </ul>
     </footer>
+    <script src="./app.js"></script>
   </body>
 </html>
